--- a/index.css
+++ b/index.css
@@ -8,13 +8,13 @@
     margin: 20px 0;
 }
 
-.img {
+img {
     width: 500px;
 }
 
-/*.js-focus-visible .focusable-ele:focus:not(.focus-visible) {*/
-    /*outline: none;*/
-/*}*/
+.js-focus-visible .focusable-ele:focus:not(.focus-visible) {
+    outline: none;
+}
 
 
 /* firefox do not work*/
