--- a/index.css
+++ b/index.css
@@ -12,13 +12,14 @@ img {
     width: 500px;
 }
 
-.js-focus-visible .focusable-ele:focus:not(.focus-visible) {
+/*.js-focus-visible .focusable-ele:focus:not(.focus-visible) {*/
+    /*outline: red solid 1px;*/
+/*}*/
+
+/*.js-focus-visible .focusable-ele:focus.focus-visible {*/
+    /*outline: none;*/
+/*}*/
+
+[data-whatintent='mouse'] *:focus {
     outline: none;
 }
-
-
-/* firefox do not work*/
-/*[data-whatintent='mouse'] *:focus {*/
-    /*outline: none;*/
-    /*!*border-color: red;*!*/
-/*}*/
