--- a/index.css
+++ b/index.css
@@ -12,9 +12,9 @@ img {
     width: 500px;
 }
 
-.js-focus-visible .focusable-ele:focus:not(.focus-visible) {
-    outline: none;
-}
+/*.js-focus-visible .focusable-ele:focus:not(.focus-visible) {*/
+    /*outline: none;*/
+/*}*/
 
 
 /* firefox do not work*/
