--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@ img {
     outline: none;
 }
 
+.js-focus-visible .focusable-ele:focus.focus-visible {
+    outline: red solid 2px;
+}
+
 
 /* firefox do not work*/
 /*[data-whatintent='mouse'] *:focus {*/
